--- a/index.html
+++ b/index.html
@@ -25,16 +25,22 @@
             </div>
         <section id="shop">
             <img id="product-image" src="./images/Bikes_X3Dark_0.jpg" alt="shopimage">
-            <h2 class="product-name">Super Bikes X</h2>
+            <h2 class="product-name">Super Bike X</h2>
             <span class="price">999.99$</span>
             <a class="add-to-bag" href="#">Add To Shopping Basket</a>
             <img class="stars" src="./images/pngaaa.com-50990.png" alt="star-rating">
 
         </section>
-        <div>
-            <img class="allbikes" src="./images/allbikes-1539286251.jpg" alt="allbikes">
+        <div class="video">
+            <!-- <img class="allbikes" src="./images/allbikes-1539286251.jpg" alt="allbikes"> -->
+            <iframe id="lorem" width="560" height="315" src="https://www.youtube.com/embed/h6t5eDe5gUE?autoplay=1&mute=1"></iframe>
+        
+        
         </div>
 
     </div>
+    <footer>
+        <p class="footer">აქ იყო <a href="#">cQIFo</a></p>
+    </footer>
 </body>
 </html>
