--- a/index.html
+++ b/index.html
@@ -9,12 +9,17 @@
     <title>Bike's Shop</title>
 </head>
 <body>
+   
     <div id="wrapper">
-     <nav id="main-navigation">
-        <ul>
+     <nav id="main-navigation" class="navigation">
+        <input type="checkbox" class="menu-btn" id="menu-btn">
+        <label for="menu-btn" class="menu-icon">
+            <span class="nav-icon"></span>
+        </label>
+        <ul class="menu">
             <li><a class="current" href="#">Bikes</a></li>
             <li><a href="#">Best Buy</a></li>
-            <li><a href="#">offers</a></li>
+            <li><a href="#">Offers</a></li>
             <li><a href="#">Accessor</a></li>
             <li><a href="#">Contact</a></li>
             <li><a href="#">About Us</a></li>
